--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ language: objective-c
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 xcode_project: Voxosonus.xcodeproj
-xcode_destination: platform=iOS Simulator, OS=12.0, name="iPhone XS"
+xcode_scheme: Voxosonus
+xcode_destination: platform=iOS Simulator, OS=12.0, name=iPhone XS
