--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ osx_image: xcode10
 xcode_project: Voxosonus.xcodeproj
 xcode_scheme: Voxosonus
 xcode_destination: platform=iOS Simulator,OS=12.0,name=iPhone XS
-script: xcodebuild -project Voxosonus.xcodeproj -scheme Voxosonus -destination platform\=iOS\ Simulator,OS\=12.0,name\=iPhone\ XS build | xcpretty
+script: xcodebuild -project Voxosonus.xcodeproj -scheme VoxosonusTests -destination platform\=iOS\ Simulator,OS\=12.0,name\=iPhone\ XS build test | xcpretty
